[gd_scene load_steps=8 format=3 uid="uid://donkvcckqtjc6"]

[ext_resource type="Script" path="res://ui/OLD_fabricator_menu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bc43eukry8d4v" path="res://assets/visual/menu/pcb_circle_plus_128.png" id="3"]
[ext_resource type="PackedScene" path="res://ui/components/OLD_crafting_core.tscn" id="5"]
[ext_resource type="Theme" uid="uid://cyhvn15bum0yy" path="res://assets/themes/main_theme.tres" id="6"]
[ext_resource type="PackedScene" uid="uid://cue07maoas8w2" path="res://ui/components/icon_button.tscn" id="7"]
[ext_resource type="Texture2D" uid="uid://do0372plufkwh" path="res://assets/visual/menu/drone_plus_128.png" id="9"]
[ext_resource type="Texture2D" uid="uid://b05wd0ueju45r" path="res://assets/visual/menu/health_plus_128.png" id="10"]

[node name="FabricatorMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6")
script = ExtResource("1")
exp_enabled = false

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
region_rect = Rect2(0, 0, 32, 32)
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FabricatorLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
text = "Fabricator"

[node name="Body" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CraftingQueue" type="MarginContainer" parent="MarginContainer/VBoxContainer/Body"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/VBoxContainer/Body/CraftingQueue"]
layout_mode = 2
region_rect = Rect2(0, 0, 32, 32)
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Body/CraftingQueue"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/Body/CraftingQueue/MarginContainer"]
layout_mode = 2

[node name="QueueItemContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Body/CraftingQueue/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Body"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CraftingCoreContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/Body/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="CraftingCore" parent="MarginContainer/VBoxContainer/Body/VBoxContainer/CraftingCoreContainer" instance=ExtResource("5")]
layout_mode = 2

[node name="CraftingCore2" parent="MarginContainer/VBoxContainer/Body/VBoxContainer/CraftingCoreContainer" instance=ExtResource("5")]
layout_mode = 2

[node name="CraftingCore3" parent="MarginContainer/VBoxContainer/Body/VBoxContainer/CraftingCoreContainer" instance=ExtResource("5")]
layout_mode = 2

[node name="CraftingOptions" type="GridContainer" parent="MarginContainer/VBoxContainer/Body/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="NewDroneBtn" parent="MarginContainer/VBoxContainer/Body/VBoxContainer/CraftingOptions" instance=ExtResource("7")]
layout_mode = 2
icon = ExtResource("9")
desc = "New Drone"

[node name="HealthBtn" parent="MarginContainer/VBoxContainer/Body/VBoxContainer/CraftingOptions" instance=ExtResource("7")]
layout_mode = 2
icon = ExtResource("10")
desc = "+1 Health"

[node name="EnhancementBtn" parent="MarginContainer/VBoxContainer/Body/VBoxContainer/CraftingOptions" instance=ExtResource("7")]
layout_mode = 2
icon = ExtResource("3")
desc = "Random Enhancement"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Body/VBoxContainer/CraftingOptions/NewDroneBtn" to="." method="_on_NewDroneBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Body/VBoxContainer/CraftingOptions/HealthBtn" to="." method="_on_HealthBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Body/VBoxContainer/CraftingOptions/EnhancementBtn" to="." method="_on_EnhancementBtn_pressed"]
